--- a/landingcss/index.html
+++ b/landingcss/index.html
@@ -9,10 +9,11 @@
 <body>
    <div class="header">
     <div class="top">
+        
         <div class="left">Header Logo</div>
-        <div class="right">header link one</div>
-        <div class="right">header link two</div>
-        <div class="right">header link three</div>
+        <div class="right"><a href="">header link one</a></div>
+        <div class="right"><a href="">header link two</a></div>
+        <div class="right"><a href="">header link three</a></div>
     </div>
     <div class="butt">
         <div class="caja1">
@@ -32,16 +33,16 @@
         <img class="img2" src="imgs/inc4.webp" alt="">
     </div>
     <div class="textos">
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, excepturi distinctio delectus esse laudantium deserunt molestias natus omnis?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, excepturi distinctio delectus esse laudantium deserunt molestias natus omnis?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, excepturi distinctio delectus esse laudantium deserunt molestias natus omnis?</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, excepturi distinctio delectus esse laudantium deserunt molestias natus omnis?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum</p>
     </div>  
    </div>
    <div class="contquo">
     <div class="quote">
         <div class="frase">Esto es una frase inspiradora o una reseña de un cliente. Sólo está aquí ocupando espacio. Puro relleno. Pero quizás, alguien, algún día, lea esto y se sienta inspirado. Por lo pronto, intentaré que al menos luzca bonito.</div>
-        <div class="citado">Don Pepe y los Globos</div>
+        <div class="citado">-Don Pepe y los Globos</div>
     </div>
    </div>
    
@@ -49,8 +50,9 @@
         <div class="action">
             <div class="call">Call to action! It's time!</div>
             <div class="ofduty">Lorem ipsum dolor sit amet</div>
-        </div>  
-        <button class="signup2">Sign up</button>
+        </div> 
+        <a href="https://youtu.be/QUAItQmq-LU?si=1OGbtMHH9Uf1oN_i"><button class="signup2">Sign up</button></a> 
+        
     </div>
     <footer>Copyright &copy; 2024 My Project</footer>
 </body>
